--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <title>Torf's Art Gallery</title>
+    <title>Torf's Gallery of Art</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
